Added in basic comment and log in functions

--- a/Demo/login.html
+++ b/Demo/login.html
@@ -16,15 +16,15 @@
     <form >
         <div class="form-group">
             <label for="email-Input">Email address</label>
-            <input type="email" class="form-control" id="email-Input" aria-describedby="emailHelp" placeholder="Enter email" style="width: 20rem;">
+            <input type="email" class="form-control" id="email-input" aria-describedby="emailHelp" placeholder="Enter email" style="width: 20rem;">
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
           </div>
           <div class="form-group">
             <label for="password-Input">Password</label>
-            <input type="password" class="form-control" id="password-Input" placeholder="Password" style="width: 20rem;">
+            <input type="password" class="form-control" id="password-input" placeholder="Password" style="width: 20rem;">
           </div> 
         
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button id="logIn-btn"type="submit" class="btn btn-primary">Submit</button>
 
     </form>
     
