--- a/Demo/publish.html
+++ b/Demo/publish.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="./js/publish.js"></script>
     <title>Publish</title>
 </head>
 <body>
     <div>
-        <input id="title-Input" type="text">
-        <input id="interest-Input" type="text">
-        <input id="opionion-Input" type="text">
-        <textarea  id="content-input" cols="30" rows="10"></textarea>
+        <input id="title-Input" type="text" placeholder="Title...">
+        <input id="interest-Input" type="text" placeholder="Interest....">
+        <input id="opinion-Input" type="text" placeholder="Opinion....">
+        <textarea  id="content-Input" cols="30" rows="10" placeholder="Content...."></textarea>
 
-        <button>Publish</button>
+        <button id='pub-btn'>Publish</button>
         
     </div>
 </body>
